<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.johnnylee.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="History Quiz"
            android:textAllCaps="true"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/QuestionStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1" />

            <RadioGroup
                android:id="@+id/answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_john_adams"
                    style="@style/AnswerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="John Adams" />

                <RadioButton
                    android:id="@+id/radio_george_washington"
                    style="@style/AnswerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="George Washington" />

                <RadioButton
                    android:id="@+id/radio_andrew_jackson"
                    style="@style/AnswerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Andrew Jackson" />

                <RadioButton
                    android:id="@+id/radio_thomas_jefferson"
                    style="@style/AnswerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Thomas Jefferson" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                style="@style/QuestionStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/question2" />

            <EditText
                android:id="@+id/answer2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                style="@style/QuestionStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/question3" />

            <EditText
                android:id="@+id/answer3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                style="@style/QuestionStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/question4" />

            <EditText
                android:id="@+id/answer4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/answer5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/QuestionStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question5" />

            <CheckBox
                android:id="@+id/checkbox_democrats"
                style="@style/AnswerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Democrats" />

            <CheckBox
                android:id="@+id/checkbox_republicians"
                style="@style/AnswerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Republicians" />

            <CheckBox
                android:id="@+id/checkbox_federalists"
                style="@style/AnswerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Federalists" />

            <CheckBox
                android:id="@+id/checkbox_progressives"
                style="@style/AnswerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Progressives" />
        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="40dp"
            android:onClick="onSubmitAnswers"
            android:text="Submit your answers" />

    </LinearLayout>

</ScrollView>
